# qwen-dictation

./: .gitignore  AGENT.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  README.md  app_config.py  app_paths.py  asr_engines.py  audio_level.py  build_app.sh  compare_asr.py  dashboard.py  demo-guide.md  dictation_history.py  dictionary.json  download_qwen_model.py  e2e_prompt_test.py  fix_plist.py  hotkeys.py  hud.py  hud_overlay.py  index.html  install.sh  install_google_stt.sh  install_nemotron_mlx.sh  install_sherpa_onnx_ko.sh  make_icon.py  mic_test.py  pyproject.toml  requirements.txt  run.sh  settings_window.py  setup.py  setup_signing.sh  term_correct.py  test_app_config.py  test_app_paths.py  test_asr_engines.py  test_audio_level.py  (+21 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  install_feedback.yml
assets/: AppIcon.icns
docs/: asr-comparison.md  index.html
promo/: README.md  apply-github-metadata.sh  automation-scope.md  channel-playbook.md  github-metadata.md  launch-checklist.md  launch-plan.md  metrics.md  positioning.md  posts.yaml  reply-bank.md
superpowers/plans/: 2026-05-31-batch-preview-review.md  2026-05-31-two-key-hold-and-toggle.md  (+5 more)
templates/: dashboard.html
tests/: test_app_config.py  test_app_paths.py  test_brand_assets.py  test_dashboard_paths.py  test_dictation_history.py  test_hotkey_config.py  test_hotkeys.py  test_hud_overlay.py  test_local_agreement.py  test_multi_hotkey.py  test_streaming.py  test_term_correct.py  test_text_normalize.py  test_transcribe_context.py  test_vocabulary.py
tools/: mic_test.py
(+11 files in other folders)
