[tool.poetry]
name = "qwen-dictation"
version = "0.1.0"
description = "Local macOS dictation app based on Qwen3-ASR"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pyaudio = "^0.2.13"
rumps = "^0.4.0"
pynput = "^1.7.6"
flask = "^3.0.0"
hf-transfer = "*"
modelscope = "*"
numpy = "*"
qwen-asr = "*"
soundfile = "*"
torch = "*"
torchaudio = "*"
transformers = "*"
accelerate = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
